fix: align and center Add to Cart button on mobile views

--- a/assets/product-template.css
+++ b/assets/product-template.css
@@ -370,7 +370,7 @@
       margin-bottom: 10px;
     }
     .product-form__quantity-submit .product-form__item--submit{
-      margin:0 0 10px 20px !important;
+      margin:0 0 10px 0 !important;
     }
     .product-form__buynow{
       margin:0;
